Graphs (RRD4J): Buffer multiple stat files into one temp file and batch flush
- Use a single temporary buffer file to sequentially accumulate all stat files
- Track offsets and lengths of each stat file segment within the temp buffer
- Flush all buffered stat files in one batch write to their positions in the mapped file
- Clean up temp buffer file after flush and close to avoid orphan temp files
- Disable direct unbuffered sync; rely on batch buffered flush instead
- Improve efficiency by reducing IO calls and buffering overhead for many stat files